# chat-multi-node

./: .env.example  .gitignore  Dockerfile  Makefile  NOTES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  db.py  logging_config.py  main.py  security.py
app/api/: auth.py  conversations.py  deps.py  ws.py
app/models/: __init__.py  base.py  conversation.py  message.py  user.py
app/repositories/: conversation.py  message.py  user.py
app/schemas/: auth.py  conversation.py  message.py  ws.py
app/services/: ai.py  auth.py  broadcaster.py  chat.py
scripts/: demo.py
tests/: conftest.py  test_auth.py  test_broadcaster.py  test_chat_flow.py  test_conversations.py  test_history_pagination.py  test_ws_endpoint.py
